# reducedTOGL

./: README.md  pyproject.toml  requirements.yaml
topognn/: __init__.py  topolayer.py
