[tool.poetry]
name = "topognn"
version = "0.1.0"
description = "Topological Graph Neural Networks"
authors = []

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
